<resources>
    <string name="app_name">FireLogIn</string>
    <string name="create_your_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already Registered ? Login Here</string>
    <string name="login">Login</string>
    <string name="new_here_create_account">New Here ? Create Account</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password is required</string>
    <string name="firelogin">FireLogIn</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_dashboard">Welcome To Dashboard</string>
</resources>